--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Shree Venkateshwara Rubbers</h2>
-              <p class="animate__animated animate__fadeInUp">We are the one of the Molded rubber products manufacturers by holding experience of 20 years, since 2000, by manufacturing, and supplying of various kinds of rubber molded products, and industrial rubber products.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <p class="animate__animated animate__fadeInUp">We are one of the leading quality extruded rubber profiles,specialized in EPDM rubber profiles by holding experience of 30 years, since 1990, by manufacturing, and supplying of various kinds of rubber molded products, industrial extrusion profiles and rubber products.</p>
+              <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
           </div>
         </div>
@@ -109,8 +109,10 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Excellent Quality</h2>
-              <p class="animate__animated animate__fadeInUp">With the help of necessary infrastructure and skilled labors lead by professional, our company is producing custom and quality rubber products, which is cost effective.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <p class="animate__animated animate__fadeInUp">With the help of necessary infrastructure and skilled labors lead by professional, our company is producing custom and quality extrusion EPDM rubber products, which is cost effective.</p>
+              <p class="animate__animated animate__fadeInUp">We are approved RATE CONTRACT by the Association of State Road Transport Undertaking(ASRTU), New Dehli for EPDM rubber glazings for Bus body section.</p>
+              <p class="animate__animated animate__fadeInUp">We are approved vendors of KSRTC, BMTC, APSRTC, TSRTC, TNSTC.</p>
+              <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
           </div>
         </div>
@@ -122,7 +124,7 @@
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Leading Manufacturers</h2>
               <p class="animate__animated animate__fadeInUp">Maintaining stability in quality of the product, and keeping updated product which is expected by customers are quite difficult in the market, but with the help of our Research and Development team as the work done by them by continuous research and surveys we are able to manufacture updated rubber products with a cost effective way, in the Indian rubber market.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
             </div>
           </div>
         </div>
@@ -151,22 +153,32 @@
         <div class="row content">
           <div class="col-lg-6">
             <h2>Shree Venkateshwara Rubbers</h2>
-            <h3>Manufacturers, and suppliers of various kinds of industrial rubber products since 2000.</h3>
+            <h3>Manufacturers, and suppliers of various kinds of industrial rubber products since 1990.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              We are the one of the Molded rubber products manufacturers by holding experience of 20 years,
-               since 2000, by manufacturing, and supplying of various kinds of rubber molded products, and
-                industrial rubber products. With the help of necessary infrastructure and skilled labors lead by
-                 professional, our company is producing custom and quality rubber products, which is cost effective.
-                  If the company has to sustain for long duration, the company has to full fill the expectations and
-                   need of the customer, because of duly satisfied customer we are here, by completing successful journey
-                    of 20 years in rubber manufacturing.
+              We are one of the leading quality extruded rubber profiles,
+              specialized in EPDM rubber profiles by holding experience of 30 years,
+               since 1990, by manufacturing, and supplying of various kinds of rubber
+                molded products, industrial extrusion profiles and rubber products. 
+                With the help of necessary infrastructure and skilled labors lead by professional,
+                 our company is producing custom and quality extrusion EPDM rubber products,
+                  which is cost effective.We are approved RATE CONTRACT by the Association
+                   of State Road Transport Undertaking(ASRTU), New Dehli for EPDM rubber
+                    glazings for Bus body section.We are approved vendors of KSRTC, BMTC,
+                     APSRTC, TSRTC, TNSTC.If the company has to sustain for long duration,
+                      the company has to full fill the expectations and need of the customer,
+                       because of duly satisfied customer we are here, by completing successful
+                        journey of 30 years in rubber manufacturing.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> EPDM Rubber </li>
+              <li><i class="ri-check-double-line"></i> EPDM</li>
+              <li><i class="ri-check-double-line"></i> Natural Rubber</li>
+              <li><i class="ri-check-double-line"></i> SBR (Sterine Vutadiene Rubber)</li>
+              <li><i class="ri-check-double-line"></i> Nitrale</li>
               <li><i class="ri-check-double-line"></i> Neoprene</li>
-              <li><i class="ri-check-double-line"></i> Industrial Rubber</li>
+              <li><i class="ri-check-double-line"></i> Silicone</li>
+              <li><i class="ri-check-double-line"></i> Viton Rubber</li>
             </ul>
             <!-- <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -220,21 +232,98 @@
 
         <div class="section-title">
           <h2>PRODUCTS</h2>
-          <p>The Products range We Offer</p>
+          <p>EPDM Section</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box">
               <i class="icofont-computer"></i>
-              <h4><a>Gaskets</a></h4>
+              <h4><a>Bus body section rubber glazing.</a></h4>
               <!-- <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-chart-bar-graph"></i>
-              <h4><a>Grommets</a></h4>
+              <h4><a>UPVC doors and window section</a></h4>
+              <!-- <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-image"></i>
+              <h4><a>Rubber Gaskets</a></h4>
+              <!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-settings"></i>
+              <h4><a>Aluminium Sections</a></h4>
+              <!-- <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-earth"></i>
+              <h4><a>Cold Storage</a></h4>
+              <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-tasks-alt"></i>
+              <h4><a>Solar panel rubber</a></h4>
+              <!-- <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-computer"></i>
+              <h4><a>Electrical Panel Board rubbers</a></h4>
+              <!-- <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-chart-bar-graph"></i>
+              <h4><a>Helmet rubbers</a></h4>
+              <!-- <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-image"></i>
+              <h4><a>Pipes and tubes</a></h4>
+              <!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-settings"></i>
+              <h4><a>Other industrial and commercial rubber beadings</a></h4>
+              <!-- <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="section-title">
+          <p>Rubber Components inNatural rubber, SBR, Nitrale, Neoprene, Silicone and Viton Rubber)</p>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="icon-box">
+              <i class="icofont-computer"></i>
+              <h4><a>Bushes</a></h4>
+              <!-- <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-chart-bar-graph"></i>
+              <h4><a>Gaskets</a></h4>
               <!-- <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
             </div>
           </div>
@@ -255,141 +344,29 @@
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-earth"></i>
-              <h4><a>Bushes</a></h4>
+              <h4><a>Grommets</a></h4>
               <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-tasks-alt"></i>
-              <h4><a>Open Tubes</a></h4>
+              <h4><a>Rubber Rings and Flanges</a></h4>
               <!-- <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-computer"></i>
-              <h4><a>Dummy Tubes</a></h4>
+              <h4><a>Cords</a></h4>
               <!-- <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-chart-bar-graph"></i>
-              <h4><a>Open Flange</a></h4>
-              <!-- <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-image"></i>
-              <h4><a>Rubber Rings</a></h4>
-              <!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-settings"></i>
-              <h4><a>Connecting Tubes</a></h4>
-              <!-- <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-earth"></i>
-              <h4><a>Rubber Profiles</a></h4>
-              <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-tasks-alt"></i>
-              <h4><a>Upvc Doors & Windows</a></h4>
-              <!-- <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-computer"></i>
-              <h4><a>Sleeves</a></h4>
-              <!-- <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-chart-bar-graph"></i>
-              <h4><a>Hosepipe</a></h4>
-              <!-- <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-image"></i>
-              <h4><a>Tubes</a></h4>
-              <!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-settings"></i>
-              <h4><a>Solar Channels</a></h4>
-              <!-- <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-earth"></i>
-              <h4><a>Beeding</a></h4>
-              <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-tasks-alt"></i>
-              <h4><a>Seals</a></h4>
-              <!-- <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-computer"></i>
-              <h4><a>Sealing Ring</a></h4>
-              <!-- <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-chart-bar-graph"></i>
-              <h4><a>Nitrile Cord</a></h4>
-              <!-- <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-image"></i>
-              <h4><a>Oil Seals</a></h4>
-              <!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-settings"></i>
-              <h4><a>Neoprene Cord</a></h4>
-              <!-- <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-earth"></i>
-              <h4><a>Sponge Beeding</a></h4>
-              <!-- <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p> -->
-            </div>
-          </div>
-          <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="icofont-tasks-alt"></i>
               <h4><a>Bellows</a></h4>
-              <!-- <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p> -->
+              <!-- <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p> -->
             </div>
           </div>
         </div>
