--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Sailor Bootstrap Template</title>
+  <title>About - SVRP</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -39,10 +39,10 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-inner-pages">
+  <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo"><a href="index.html">Sailor</a></h1>
+      <h1 class="logo"><img class="px-1" src="assets/img/logo.jpg"><a href="index.html">SVRP</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -50,29 +50,28 @@
 
         <ul>
           <li><a href="index.html">Home</a></li>
-
-          <li class="drop-down"><a href="#">About</a>
+          <li class="active"><a href="about.html">About Us</a></li><!-- href="about.html"-->
+          <!-- <li><a href="team.html">Team</a></li> -->
+          <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
+          <li class="drop-down"><a>Services</a>
             <ul>
-              <li class="active"><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
+              <li><a href="">Our Services</a></li>
+              <li class="drop-down"><a href="#">Products</a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="EPDM.html">EPDM Rubbers</a></li>
+                  <li><a href="Neoprene.html">Neoprene Rubbers</a></li>
+                  <!-- <li><a href="#">Deep Drop Down 3</a></li>
                   <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li> -->
                 </ul>
               </li>
             </ul>
           </li>
 
-          <li><a href="services.html">Services</a></li>
+          <!-- <li><a href="services.html">About Us</a></li> -->
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="pricing.html">Pricing</a></li> -->
+          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
@@ -107,24 +106,38 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>Shree Venkateshwara Rubbers</h2>
+            <h3>Manufacturers, and suppliers of various kinds of industrial rubber products since 1990.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              We are one of the leading quality extruded rubber profiles,
+              specialized in EPDM rubber profiles by holding experience of 30 years,
+               since 1990, by manufacturing, and supplying of various kinds of rubber
+                molded products, industrial extrusion profiles and rubber products. 
+                With the help of necessary infrastructure and skilled labors lead by professional,
+                 our company is producing custom and quality extrusion EPDM rubber products,
+                  which is cost effective.We are approved RATE CONTRACT by the Association
+                   of State Road Transport Undertaking(ASRTU), New Dehli for EPDM rubber
+                    glazings for Bus body section.We are approved vendors of KSRTC, BMTC,
+                     APSRTC, TSRTC, TNSTC.If the company has to sustain for long duration,
+                      the company has to full fill the expectations and need of the customer,
+                       because of duly satisfied customer we are here, by completing successful
+                        journey of 30 years in rubber manufacturing.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i> EPDM</li>
+              <li><i class="ri-check-double-line"></i> Natural Rubber</li>
+              <li><i class="ri-check-double-line"></i> SBR (Sterine Vutadiene Rubber)</li>
+              <li><i class="ri-check-double-line"></i> Nitrale</li>
+              <li><i class="ri-check-double-line"></i> Neoprene</li>
+              <li><i class="ri-check-double-line"></i> Silicone</li>
+              <li><i class="ri-check-double-line"></i> Viton Rubber</li>
             </ul>
-            <p class="font-italic">
+            <!-- <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
-            </p>
+            </p> -->
           </div>
         </div>
 
@@ -132,7 +145,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
+    <!-- <section id="team" class="team section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -213,10 +226,11 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section> -->
+    <!-- End Team Section -->
 
     <!-- ======= Our Skills Section ======= -->
-    <section id="skills" class="skills">
+    <!-- <section id="skills" class="skills">
       <div class="container">
 
         <div class="section-title">
@@ -279,7 +293,8 @@
         </div>
 
       </div>
-    </section><!-- End Our Skills Section -->
+    </section> -->
+    <!-- End Our Skills Section -->
 
   </main><!-- End #main -->
 
@@ -291,19 +306,22 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Shree Venkateshwara Rubbers</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Mathrushree Layout, <br>
+                Maruthi Nagar, Peenya, Bengaluru, Karnataka 560058<br><br>
+                <strong>Phone:</strong> 9449157851<br>
+                7019348601<br>
+                9448497634<br>
+                9019968100<br>
+                <strong>Email:</strong> svrpepdm@gmail.com<br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a  class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a  class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a  class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a  class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a  class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -311,28 +329,28 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="EPDM.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a >Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a >Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="EPDM.html">EPDM Rubber</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="Neoprene.html">Neoprene</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>SVRP  Since 1990</h4>
+            <p>The company has to full fill the expectations and need of the customer, because of duly satisfied customer we are here, by completing successful journey of 30 years in rubber manufacturing.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -344,15 +362,16 @@
     </div>
 
     <div class="container">
-      <div class="copyright">
+      <!-- <div class="copyright">
         &copy; Copyright <strong><span>Sailor</span></strong>. All Rights Reserved
-      </div>
+      </div> -->
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a>BootstrapMade</a> -->
+        Designed by Ankith V Hegde
       </div>
     </div>
   </footer><!-- End Footer -->
