--- a/EPDM.html
+++ b/EPDM.html
@@ -39,48 +39,48 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-inner-pages">
+  <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-        <h1 class="logo"><a href="index.html">SVR</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-  
-        <nav class="nav-menu d-none d-lg-block">
-  
-          <ul>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a>About Us</a></li><!-- href="about.html"-->
-            <!-- <li><a href="team.html">Team</a></li> -->
-            <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-            <li class="drop-down"><a>Services</a>
-              <ul>
-                <li><a href="">Our Services</a></li>
-                <li class="drop-down"><a href="#">Products</a>
-                  <ul>
-                    <li><a href="EPDM.html">EPDM Rubbers</a></li>
-                    <li><a href="Neoprene.html">Neoprene Rubbers</a></li>
-                    <!-- <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li> -->
-                  </ul>
-                </li>
-              </ul>
-            </li>
-  
-            <!-- <li><a href="services.html">About Us</a></li> -->
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <!-- <li><a href="pricing.html">Pricing</a></li> -->
-            <!-- <li><a href="blog.html">Blog</a></li> -->
-            <li><a href="contact.html">Contact</a></li>
-  
-          </ul>
-  
-        </nav><!-- .nav-menu -->
-  
-        <a href="index.html" class="get-started-btn ml-auto">Get Started</a>
-  
-      </div>
+      <h1 class="logo"><img class="px-1" src="assets/img/logo.jpg"><a href="index.html">SVRP</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav class="nav-menu d-none d-lg-block">
+
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li><!-- href="about.html"-->
+          <!-- <li><a href="team.html">Team</a></li> -->
+          <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
+          <li class="drop-down"><a>Services</a>
+            <ul>
+              <li><a href="">Our Services</a></li>
+              <li class="drop-down"><a href="#">Products</a>
+                <ul>
+                  <li class="active"><a href="EPDM.html">EPDM Rubbers</a></li>
+                  <li><a href="Neoprene.html">Neoprene Rubbers</a></li>
+                  <!-- <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li> -->
+                </ul>
+              </li>
+            </ul>
+          </li>
+
+          <!-- <li><a href="services.html">About Us</a></li> -->
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <!-- <li><a href="pricing.html">Pricing</a></li> -->
+          <!-- <li><a href="blog.html">Blog</a></li> -->
+          <li><a href="contact.html">Contact</a></li>
+
+        </ul>
+
+      </nav><!-- .nav-menu -->
+
+      <a href="index.html" class="get-started-btn ml-auto">Get Started</a>
+
+    </div>
   </header><!-- End Header -->
 
   <main id="main">
@@ -312,19 +312,22 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Shree Venkateshwara Rubbers</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Mathrushree Layout, <br>
+                Maruthi Nagar, Peenya, Bengaluru, Karnataka 560058<br><br>
+                <strong>Phone:</strong> 9449157851<br>
+                7019348601<br>
+                9448497634<br>
+                9019968100<br>
+                <strong>Email:</strong> svrpepdm@gmail.com<br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a  class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a  class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a  class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a  class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a  class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -332,28 +335,28 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="EPDM.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a >Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a >Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="EPDM.html">EPDM Rubber</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="Neoprene.html">Neoprene</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>SVRP  Since 1990</h4>
+            <p>The company has to full fill the expectations and need of the customer, because of duly satisfied customer we are here, by completing successful journey of 30 years in rubber manufacturing.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -365,15 +368,16 @@
     </div>
 
     <div class="container">
-      <div class="copyright">
+      <!-- <div class="copyright">
         &copy; Copyright <strong><span>Sailor</span></strong>. All Rights Reserved
-      </div>
+      </div> -->
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a>BootstrapMade</a> -->
+        Designed by Ankith V Hegde
       </div>
     </div>
   </footer><!-- End Footer -->
