--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a>About Us</a></li><!-- href="about.html"-->
+          <li><a href="about.html">About Us</a></li><!-- href="about.html"-->
           <!-- <li><a href="team.html">Team</a></li> -->
           <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
           <li class="drop-down"><a>Services</a>
@@ -539,17 +539,20 @@
             <div class="footer-info">
               <h3>Shree Venkateshwara Rubbers</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Mathrushree Layout, <br>
+                Maruthi Nagar, Peenya, Bengaluru, Karnataka 560058<br><br>
+                <strong>Phone:</strong> 9449157851<br>
+                7019348601<br>
+                9448497634<br>
+                9019968100<br>
+                <strong>Email:</strong> svrpepdm@gmail.com<br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a  class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a  class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a  class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a  class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a  class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -557,19 +560,19 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="EPDM.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a >Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a >Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">EPDM Rubber</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Neoprene</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="EPDM.html">EPDM Rubber</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="Neoprene.html">Neoprene</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
@@ -577,8 +580,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>SVRP  Since 1990</h4>
+            <p>The company has to full fill the expectations and need of the customer, because of duly satisfied customer we are here, by completing successful journey of 30 years in rubber manufacturing.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
