--- a/Neoprene.html
+++ b/Neoprene.html
@@ -379,7 +379,7 @@
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
         <!-- Designed by <a>BootstrapMade</a> -->
-        Designed by Ankith V Hegde
+        <!-- Designed by Ankith V Hegde -->
       </div>
     </div>
   </footer><!-- End Footer -->
